cspparser/cspParserParser.py
# Generated from cspParser.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class cspParserParser ( Parser ):

    grammarFileName = "cspParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#'", "'import'", "';'", "'include'", 
                     "'channel'", "'['", "']'", "'assert'", "'|='", "'('", 
                     "')'", "'[]'", "'<>'", "'!'", "'?'", "'&&'", "'||'", 
                     "'xor'", "'->'", "'<->'", "'/\\'", "'\\/'", "'.'", 
                     "'deadlockfree'", "'nonterminating'", "'divergencefree'", 
                     "'deterministic'", "'reaches'", "'refines'", "'<F>'", 
                     "'<FD>'", "'with'", "'min'", "'max'", "','", "'alphabet'", 
                     "'{'", "'}'", "'define'", "'-'", "'true'", "'false'", 
                     "'enum'", "'var'", "'='", "'@'", "'&'", "'|'", "'^'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", 
                     "'*'", "'/'", "'%'", "'++'", "'--'", "'call'", "'new'", 
                     "'$'", "'hvar'", "':'", "'..'", "'if'", "'else'", "'while'", 
                     "'|||'", "'[*]'", "'interrupt'", "'\\'", "'case'", 
                     "'default'", "'ifa'", "'ifb'", "'atomic'", "'Skip'", 
                     "'Stop'", "'tau'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "STRING", 
                      "WS", "INT", "COMMENT", "LINE_COMMENT" ]

    RULE_specification = 0
    RULE_specBody = 1
    RULE_library = 2
    RULE_channel = 3
    RULE_assertion = 4
    RULE_withClause = 5
    RULE_definitionRef = 6
    RULE_alphabet = 7
    RULE_define = 8
    RULE_dparameter = 9
    RULE_dstatement = 10
    RULE_block = 11
    RULE_statement = 12
    RULE_localVariableDeclaration = 13
    RULE_expression = 14
    RULE_conditionalOrExpression = 15
    RULE_conditionalAndExpression = 16
    RULE_conditionalXorExpression = 17
    RULE_indexedExpression = 18
    RULE_bitwiseLogicExpression = 19
    RULE_equalityExpression = 20
    RULE_relationalExpression = 21
    RULE_additiveExpression = 22
    RULE_multiplicativeExpression = 23
    RULE_unaryExpression = 24
    RULE_arrayExpression = 25
    RULE_unaryExpressionNotPlusMinus = 26
    RULE_methods_fields_call = 27
    RULE_letDefintion = 28
    RULE_variableRange = 29
    RULE_argumentExpression = 30
    RULE_ifExpression = 31
    RULE_whileExpression = 32
    RULE_recordExpression = 33
    RULE_recordElement = 34
    RULE_definition = 35
    RULE_parameter = 36
    RULE_interleaveExpr = 37
    RULE_parallelExpr = 38
    RULE_paralDef = 39
    RULE_paralDef2 = 40
    RULE_generalChoiceExpr = 41
    RULE_internalChoiceExpr = 42
    RULE_externalChoiceExpr = 43
    RULE_interruptExpr = 44
    RULE_hidingExpr = 45
    RULE_sequentialExpr = 46
    RULE_guardExpr = 47
    RULE_channelExpr = 48
    RULE_eventExpr = 49
    RULE_caseExpr = 50
    RULE_caseCondition = 51
    RULE_ifExpr = 52
    RULE_ifExprs = 53
    RULE_ifBlock = 54
    RULE_atomicExpr = 55
    RULE_atom = 56
    RULE_eventM = 57
    RULE_eventList = 58
    RULE_eventName = 59

    ruleNames =  [ "specification", "specBody", "library", "channel", "assertion", 
                   "withClause", "definitionRef", "alphabet", "define", 
                   "dparameter", "dstatement", "block", "statement", "localVariableDeclaration", 
                   "expression", "conditionalOrExpression", "conditionalAndExpression", 
                   "conditionalXorExpression", "indexedExpression", "bitwiseLogicExpression", 
                   "equalityExpression", "relationalExpression", "additiveExpression", 
                   "multiplicativeExpression", "unaryExpression", "arrayExpression", 
                   "unaryExpressionNotPlusMinus", "methods_fields_call", 
                   "letDefintion", "variableRange", "argumentExpression", 
                   "ifExpression", "whileExpression", "recordExpression", 
                   "recordElement", "definition", "parameter", "interleaveExpr", 
                   "parallelExpr", "paralDef", "paralDef2", "generalChoiceExpr", 
                   "internalChoiceExpr", "externalChoiceExpr", "interruptExpr", 
                   "hidingExpr", "sequentialExpr", "guardExpr", "channelExpr", 
                   "eventExpr", "caseExpr", "caseCondition", "ifExpr", "ifExprs", 
                   "ifBlock", "atomicExpr", "atom", "eventM", "eventList", 
                   "eventName" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    ID=83
    STRING=84
    WS=85
    INT=86
    COMMENT=87
    LINE_COMMENT=88

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SpecificationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(cspParserParser.EOF, 0)

        def specBody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cspParserParser.SpecBodyContext)
            else:
                return self.getTypedRuleContext(cspParserParser.SpecBodyContext,i)


        def getRuleIndex(self):
            return cspParserParser.RULE_specification

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecification" ):
                listener.enterSpecification(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecification" ):
                listener.exitSpecification(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpecification" ):
                return visitor.visitSpecification(self)
            else:
                return visitor.visitChildren(self)




    def specification(self):

        localctx = cspParserParser.SpecificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_specification)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 26388279066658) != 0 or _la==65 or _la==83:
                self.state = 120
                self.specBody()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(cspParserParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpecBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def library(self):
            return self.getTypedRuleContext(cspParserParser.LibraryContext,0)


        def letDefintion(self):
            return self.getTypedRuleContext(cspParserParser.LetDefintionContext,0)


        def definition(self):
            return self.getTypedRuleContext(cspParserParser.DefinitionContext,0)


        def assertion(self):
            return self.getTypedRuleContext(cspParserParser.AssertionContext,0)


        def alphabet(self):
            return self.getTypedRuleContext(cspParserParser.AlphabetContext,0)


        def define(self):
            return self.getTypedRuleContext(cspParserParser.DefineContext,0)


        def channel(self):
            return self.getTypedRuleContext(cspParserParser.ChannelContext,0)


        def getRuleIndex(self):
            return cspParserParser.RULE_specBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecBody" ):
                listener.enterSpecBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecBody" ):
                listener.exitSpecBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpecBody" ):
                return visitor.visitSpecBody(self)
            else:
                return visitor.visitChildren(self)




    def specBody(self):

        localctx = cspParserParser.SpecBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_specBody)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.library()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.letDefintion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.definition()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 131
                self.assertion()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 132
                self.alphabet()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 133
                self.define()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 134
                self.channel()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LibraryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(cspParserParser.STRING, 0)

        def getRuleIndex(self):
            return cspParserParser.RULE_library

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLibrary" ):
                listener.enterLibrary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLibrary" ):
                listener.exitLibrary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLibrary" ):
                return visitor.visitLibrary(self)
            else:
                return visitor.visitChildren(self)




    def library(self):

        localctx = cspParserParser.LibraryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_library)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(cspParserParser.T__0)
                self.state = 138
                self.match(cspParserParser.T__1)
                self.state = 139
                self.match(cspParserParser.STRING)
                self.state = 140
                self.match(cspParserParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.match(cspParserParser.T__0)
                self.state = 142
                self.match(cspParserParser.T__3)
                self.state = 143
                self.match(cspParserParser.STRING)
                self.state = 144
                self.match(cspParserParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChannelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(cspParserParser.ID, 0)

        def additiveExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cspParserParser.AdditiveExpressionContext)
            else:
                return self.getTypedRuleContext(cspParserParser.AdditiveExpressionContext,i)


        def getRuleIndex(self):
            return cspParserParser.RULE_channel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChannel" ):
                listener.enterChannel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChannel" ):
                listener.exitChannel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChannel" ):
                return visitor.visitChannel(self)
            else:
                return visitor.visitChildren(self)




    def channel(self):

        localctx = cspParserParser.ChannelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_channel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(cspParserParser.T__4)
            self.state = 148
            self.match(cspParserParser.ID)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 149
                self.match(cspParserParser.T__5)
                self.state = 150
                self.additiveExpression()
                self.state = 151
                self.match(cspParserParser.T__6)


            self.state = 155
            self.additiveExpression()
            self.state = 156
            self.match(cspParserParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssertionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definitionRef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cspParserParser.DefinitionRefContext)
            else:
                return self.getTypedRuleContext(cspParserParser.DefinitionRefContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(cspParserParser.ID)
            else:
                return self.getToken(cspParserParser.ID, i)

        def withClause(self):
            return self.getTypedRuleContext(cspParserParser.WithClauseContext,0)


        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(cspParserParser.STRING)
            else:
                return self.getToken(cspParserParser.STRING, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(cspParserParser.INT)
            else:
                return self.getToken(cspParserParser.INT, i)

        def getRuleIndex(self):
            return cspParserParser.RULE_assertion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssertion" ):
                listener.enterAssertion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssertion" ):
                listener.exitAssertion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssertion" ):
                return visitor.visitAssertion(self)
            else:
                return visitor.visitChildren(self)




    def assertion(self):

        localctx = cspParserParser.AssertionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assertion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(cspParserParser.T__0)
            self.state = 159
            self.match(cspParserParser.T__7)
            self.state = 160
            self.definitionRef()
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 161
                self.match(cspParserParser.T__8)
                self.state = 163 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 162
                    _la = self._input.LA(1)
                    if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 16776192) != 0 or (((_la - 83)) & ~0x3f) == 0 and ((1 << (_la - 83)) & 11) != 0):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 165 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 16776192) != 0 or (((_la - 83)) & ~0x3f) == 0 and ((1 << (_la - 83)) & 11) != 0):
                        break

                pass

            elif la_ == 2:
                self.state = 167
                self.match(cspParserParser.T__23)
                pass

            elif la_ == 3:
                self.state = 168
                self.match(cspParserParser.T__24)
                pass

            elif la_ == 4:
                self.state = 169
                self.match(cspParserParser.T__25)
                pass

            elif la_ == 5:
                self.state = 170
                self.match(cspParserParser.T__26)
                pass

            elif la_ == 6:
                self.state = 171
                self.match(cspParserParser.T__27)
                self.state = 172
                self.match(cspParserParser.ID)
                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==32:
                    self.state = 173
                    self.withClause()


                pass

            elif la_ == 7:
                self.state = 176
                self.match(cspParserParser.T__28)
                self.state = 177
                self.definitionRef()
                pass

            elif la_ == 8:
                self.state = 178
                self.match(cspParserParser.T__28)
                self.state = 179
                self.match(cspParserParser.T__29)
                self.state = 180
                self.definitionRef()
                pass

            elif la_ == 9:
                self.state = 181
                self.match(cspParserParser.T__28)
                self.state = 182
                self.match(cspParserParser.T__30)
                self.state = 183
                self.definitionRef()
                pass


            self.state = 186
            self.match(cspParserParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WithClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(cspParserParser.ExpressionContext,0)


        def getRuleIndex(self):
            return cspParserParser.RULE_withClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWithClause" ):
                listener.enterWithClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWithClause" ):
                listener.exitWithClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWithClause" ):
                return visitor.visitWithClause(self)
            else:
                return visitor.visitChildren(self)




    def withClause(self):

        localctx = cspParserParser.WithClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_withClause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.match(cspParserParser.T__31)
            self.state = 189
            _la = self._input.LA(1)
            if not(_la==33 or _la==34):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 190
            self.match(cspParserParser.T__9)
            self.state = 191
            self.expression()
            self.state = 192
            self.match(cspParserParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionRefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(cspParserParser.ID, 0)

        def argumentExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cspParserParser.ArgumentExpressionContext)
            else:
                return self.getTypedRuleContext(cspParserParser.ArgumentExpressionContext,i)


        def getRuleIndex(self):
            return cspParserParser.RULE_definitionRef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinitionRef" ):
                listener.enterDefinitionRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinitionRef" ):
                listener.exitDefinitionRef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinitionRef" ):
                return visitor.visitDefinitionRef(self)
            else:
                return visitor.visitChildren(self)




    def definitionRef(self):

        localctx = cspParserParser.DefinitionRefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_definitionRef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.match(cspParserParser.ID)
            self.state = 207
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 195
                self.match(cspParserParser.T__9)
                self.state = 204
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3f) == 0 and ((1 << _la) & -4539620727807589312) != 0 or _la==83 or _la==86:
                    self.state = 196
                    self.argumentExpression()
                    self.state = 201
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==35:
                        self.state = 197
                        self.match(cspParserParser.T__34)
                        self.state = 198
                        self.argumentExpression()
                        self.state = 203
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)


